# graphmcp

./: .gitignore  .gitmodules  CLAUDE.md  DB_DECOMMISSION_UI_SUMMARY.md  DOCUMENTATION_REVIEW.md  ENHANCED_DB_WORKFLOW_SUMMARY.md  INITIAL-claude-trace-logging.md  INITIAL-unified-logging.md  INITIAL.md  MCP_INTEGRATION_TEST_PLAN.md  MOCK_WORKFLOW_SUMMARY.md  Makefile  PLANNING.md  QUICK_REFERENCE.md  README.md  TASK.md  USAGE_GUIDE.md  WORKFLOW_UI_ADAPTATION.md  __init__.py  agent-process.md  check_import.py  context-repomix.md  corrected-mcp.json  current_bugs_analysis.md  debug_rules_application.py  demo-readiness-state.md  demo.py  demo_enhanced_logging.py  enhanced_db_decommission_demo.py  enhanced_mcp_config.json  env.example  environment_variables.md  error_context_codebase.md  mcp_config.json  mcp_config.json.backup  ovora_mcp_config.json  pyproject.toml  pytest.ini  repo-analysis-2.py.md  repomix.config.json  (+14 more)
!~trash/: enhanced_db_decommission.py  enhanced_pattern_discovery.py  repo-analysis.md
PRDs/: claude-trace-structured-logging.md
PRPs/: database-decommissioning-workflow-production-ready.md  database-decommissioning-workflow-refactoring.md  database-reference-extractor.md  enhanced-workflow-logging-system.md  graphmcp_workflow_demo_PRP.md  pragmatic-database-decommissioning.md  unified-logging-system.md
clients/: __init__.py  base.py  filesystem.py  github.py  mcp_config.json  repomix.py  slack.py
composite/: multi_server_client.py
concrete/: __init__.py  contextual_rules_engine.py  database_reference_extractor.py  db_decommission.py  demo.sh  enhanced_db_decommission.py  enhanced_logger.py  enhanced_pattern_discovery.py  enhanced_workflow_diagram.md  error_handling.py  file_decommission_processor.py  integration_validation.py  monitoring.py  parameter_service.py  pattern_discovery.py  performance_optimization.py  progress_tracker.py  source_type_classifier.py  visual_renderer.py  workflow_flowchart.md  workflow_logger.py
demo/: __init__.py  cache.py  config.py  enhanced_logger.py  enhanced_logging_demo.py  runner.py
docs/: API_REFERENCE.md  INTEGRATION_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_HISTORY.md  dbdecomission-pattern-search.md  dbdecomission-refactoring-verification.md
examples/: data_models.py  makefile_patterns.md  mcp_base_client.py  testing_patterns.py
graphmcp/: __init__.py  utils.py
graphmcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
legacy/: ui_demo.py
logs/: db_decommission_debug_test_db_1752133023.json  db_decommission_demo_production_db_1752120318.json  db_decommission_demo_production_db_1752121298.json  db_decommission_example_database_1752117472.json  db_decommission_example_database_1752118027.json  db_decommission_prod_demo_db_1752132779.json  db_decommission_production_demo_db_1752133326.json  db_decommission_repomix_test_db_1752133636.json
patches/: boost-pack-fat.md
plan/: grand-refac-plan.md  implementation-guide.md  pitfalls-and-considerations.md  quick-reference.md  refactoring-summary.md
tests/: conftest.py  test_demo_runner.py  test_enhanced_logger.py  test_enhanced_logging.py  test_progress_tracker.py  test_visual_renderer.py  (+1 more)
ui/: app.py
(+194 files in other folders)
