[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "graphmcp"
version = "0.0.1"
description = "Core utilities and clients for the Model Context Protocol (MCP)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Blazej Przybyszewski", email = "blazej.przybyszewski@gmail.com"}
]
dependencies = [
    "mcp-use>=1.0.0",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."] 